--- a/Module 2 Assignemnt/index.html
+++ b/Module 2 Assignemnt/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+     <meta http-equiv="Permissions-Policy" content="interest-cohort=()"/>
      <meta name="view-port" content="width=device-width, initial-scale=1.0">
      <title>Module 2: Coursera Assignment</title>
      <link rel="stylesheet" href="Css/style.css">
