--- a/Module 2 Assignemnt/index.html
+++ b/Module 2 Assignemnt/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
      <meta name="view-port" content="width=device-width, initial-scale=1.0">
      <title>Module 2: Coursera Assignment</title>
-     <link rel="stylesheet" href="Css/style.css">
+     <link rel="stylesheet" href="css/style.css">
 </head>
  
  <body>
